# ntu-crypto-game

backend/: .gitignore  main.py  pyproject.toml  test.py  test_insert.py
backend/scripts/: init_db.py  test_insert.py
backend/src/: consts.py  crypto.py  db.py  pixellabtest.py
my-minikit-app/: package-lock.json  package.json  tsconfig.json
my-minikit-app/app/: globals.css  layout.tsx  page.tsx
my-minikit-app/app/components/: Battle.tsx  DemoComponents.tsx  Game.tsx  Link.tsx  Sprite.tsx
my-minikit-app/app/game/: BattleScene.ts  CharacterManager.ts  CollectionScene.ts  CombinerScene.ts  GameManager.ts  GameState.ts  HomeScene.ts  MarketplaceScene.ts  PackScene.ts  PhaserGame.tsx  index.ts
my-minikit-app/app/lib/: misc.ts
my-minikit-app/app/login/: page.tsx
my-minikit-app/app/logout/: page.tsx
my-minikit-app/app/payment/: page.tsx
my-minikit-app/app/signup/: page.tsx
