[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pyjwt>=2.10.1",
]

[dependency-groups]
dev = [
    "backend",
    "ruff>=0.12.9",
]


[tool.uv]
package = true
